Update and rename main.html to index.html

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <div class="envelope">
                 <div class="letter">
                     <div class="text">
-                        <strong>Dear Gab.</strong>
+                        <strong>Dear Tin.</strong>
                         <p>
-                            Not interested anymore.
+                            Hiiiii Tinnnnnnnn, I likeeeeeee youuuuuu sooooooo muuuuuuch poooooo🩷😘🖤.
                         </p>
                     </div>
                 </div>
